--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bit Digital Mining Online</title>
+  <title>Trade Vanta</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* Button styling */
@@ -70,7 +70,7 @@
 <body>
 
   <header class="top-bar">
-    <h1>Bit Digital Mining Online</h1>
+    <h1>Trade Vanta</h1>
   </header>
 
 <!-- Slider Section -->
