--- a/dashboard.html
+++ b/dashboard.html
@@ -161,7 +161,12 @@
     <div class="label">Balance</div>
     <div class="buttons">
       <button id="deposit-button"><i class="fas fa-wallet"></i>Deposit</button>
-      <button id="withdraw-button"><i class="fas fa-arrow-up"></i>Withdraw</button>
+      <button id="withdraw-button">
+  <a href="withdraw.html" style="display: inline-block; text-decoration: none; color: inherit;">
+    <i class="fas fa-arrow-up"></i> Withdraw
+  </a>
+</button>
+
       <button id="transfer-button"><i class="fas fa-exchange-alt"></i>Transfer</button>
     </div>
   </div>
