--- a/withdraw.html
+++ b/withdraw.html
@@ -4,115 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Withdraw</title>
-  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #fff;
-      color: #333;
-    }
-    .header {
-      background-color: #002366;
-      color: #fff;
-      padding: 16px;
-      font-size: 18px;
-    }
-    .container {
-      padding: 20px;
-    }
-    .card {
-      background-color: #f0fdf4;
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-    .withdraw-section {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    .withdraw-section input {
-      font-size: 28px;
-      text-align: center;
-      border: none;
-      border-bottom: 1px solid #ccc;
-      width: 100px;
-      outline: none;
-    }
-    .note {
-      font-size: 14px;
-      color: #777;
-      margin-top: 5px;
-    }
-    .bank-info, .add-bank-form {
-      margin-top: 30px;
-      padding: 15px;
-      border: 1px solid #eee;
-      border-radius: 10px;
-    }
-    .bank-info {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .error {
-      color: red;
-      font-size: 14px;
-      margin-top: 10px;
-      display: none;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; background-color: #fff; color: #333; }
+    .header { background-color: #002366; color: #fff; padding: 16px; font-size: 18px; }
+    .container { padding: 20px; }
+    .card { background-color: #f0fdf4; padding: 15px; border-radius: 10px; margin-bottom: 20px; }
+    .withdraw-section { text-align: center; margin-bottom: 10px; }
+    .withdraw-section input { font-size: 28px; text-align: center; border: none; border-bottom: 1px solid #ccc; width: 100px; outline: none; }
+    .note { font-size: 14px; color: #777; margin-top: 5px; }
+    .bank-info, .add-bank-form { margin-top: 30px; padding: 15px; border: 1px solid #eee; border-radius: 10px; }
+    .bank-info { display: flex; align-items: center; justify-content: space-between; }
+    .error { color: red; font-size: 14px; margin-top: 10px; display: none; }
     .withdraw-btn, .confirm-btn, .add-bank-btn {
-      margin-top: 30px;
-      padding: 15px;
-      width: 100%;
-      border: none;
-      font-size: 16px;
-      font-weight: bold;
-      border-radius: 8px;
-      background-color: #f0f3f7;
-      color: #bcc2cc;
-      cursor: not-allowed;
+      margin-top: 30px; padding: 15px; width: 100%; border: none; font-size: 16px; font-weight: bold;
+      border-radius: 8px; background-color: #f0f3f7; color: #bcc2cc; cursor: not-allowed;
     }
     .withdraw-btn.active, .confirm-btn.active {
-      background-color: #007bff;
-      color: #fff;
-      cursor: pointer;
+      background-color: #007bff; color: #fff; cursor: pointer;
     }
-    .add-bank-btn {
-      background-color: #007bff;
-      color: #fff;
-      cursor: pointer;
-    }
-    .add-bank-form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .add-bank-form input {
-      width: 90%;
-      margin: 8px 0;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
+    .add-bank-btn { background-color: #007bff; color: #fff; cursor: pointer; }
+    .add-bank-form { display: flex; flex-direction: column; align-items: center; }
+    .add-bank-form input { width: 90%; margin: 8px 0; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
   </style>
 </head>
 <body>
-
 <div class="header">Withdraw</div>
-
 <div class="container">
   <div class="card">
     <h3>Withdrawable Winnings</h3>
-    <p><strong>₹<span id="balance">Loading...</span></strong></p>
+    <p><strong><span id="currency">₹</span><span id="balance">0</span></strong></p>
   </div>
 
   <div class="withdraw-section">
     <label for="amount">Withdraw</label><br/>
-    <span style="font-size: 24px;">₹</span>
+    <span id="input-currency" style="font-size: 24px;">₹</span>
     <input type="number" id="amount" min="0" />
     <div class="note">Minimum ₹60</div>
   </div>
@@ -121,13 +48,13 @@
     <button id="add-bank-btn" class="add-bank-btn">Add Bank Account</button>
   </div>
 
-  <div id="error-message" class="error">Withdrawal cannot exceed your balance</div>
-  <button id="withdraw-btn" class="withdraw-btn">WITHDRAW</button>
+  <div id="error-message" class="error">Invalid amount. Check your balance or minimum amount.</div>
+  <button id="withdraw-btn" class="withdraw-btn" disabled>WITHDRAW</button>
 </div>
 
 <script>
-  // Firebase Config for Withdraw App
-  const firebaseConfigWithdraw = {
+  // Main Firebase for withdrawal data
+  const firebaseConfig = {
     apiKey: "AIzaSyC0seQcc9v7ms5OqUCPi7rxaN4pJdP8zlE",
     authDomain: "withdrawapp-eb9a9.firebaseapp.com",
     projectId: "withdrawapp-eb9a9",
@@ -135,73 +62,67 @@
     messagingSenderId: "482698678271",
     appId: "1:482698678271:web:669173ee71c85130b621ca"
   };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-  // Initialize Firebase for Withdraw
-  firebase.initializeApp(firebaseConfigWithdraw);
-  const dbWithdraw = firebase.firestore();
-
-  // Firebase Config for Balance App (Second Project)
+  // Secondary Firebase for balance/currency
   const firebaseConfigBalance = {
     apiKey: "AIzaSyDtCfsMkc_Z_9ZeF0TEHTDFBzLlkU-egSc",
     authDomain: "tradevanta-a3e0d.firebaseapp.com",
-    projectId: "tradevanta-a3e0d",
-    storageBucket: "tradevanta-a3e0d.appspot.com",
-    messagingSenderId: "441098922985",
-    appId: "1:441098922985:web:163878a0ef5b2054f8b978"
+    projectId: "tradevanta-a3e0d"
   };
-
-  // Initialize Firebase for Balance
   const appBalance = firebase.initializeApp(firebaseConfigBalance, "balanceApp");
   const dbBalance = firebase.firestore(appBalance);
 
-  // Get userId from localStorage (or Firebase Authentication)
-  const userId = localStorage.getItem("userId");
+  const amountInput = document.getElementById('amount');
+  const withdrawBtn = document.getElementById('withdraw-btn');
+  const errorMessage = document.getElementById('error-message');
+  const balanceEl = document.getElementById('balance');
+  const currencyEls = [document.getElementById('currency'), document.getElementById('input-currency')];
 
-  if (!userId) {
-    alert("User not logged in. Please log in to proceed.");
-    // Redirect to login page or handle appropriately
-  } else {
-    // Fetch user's balance from the Balance Firestore
-    const userRef = dbBalance.collection("users").doc(userId); // Assuming 'users' collection in balance project
-    userRef.get().then(doc => {
-      if (doc.exists) {
-        const userData = doc.data();
-        const userBalance = userData.balance || 0;  // Assuming 'balance' field exists
-        document.getElementById('balance').innerText = userBalance;  // Display balance
+  let userBalance = 0;
+  let userCurrency = '₹';
+  let bankAdded = false;
 
-        const minWithdraw = 60;
+  const minWithdraw = 60;
 
-        const amountInput = document.getElementById('amount');
-        const withdrawBtn = document.getElementById('withdraw-btn');
-        const errorMessage = document.getElementById('error-message');
+  // Fetch balance and currency
+  async function fetchUserInfo() {
+    const userId = localStorage.getItem("userId"); // or however you store it
+    if (!userId) return;
 
-        // Withdraw input validation
-        amountInput.addEventListener('input', () => {
-          const amount = parseFloat(amountInput.value);
-          if (!amount || amount < minWithdraw || amount > userBalance) {
-            withdrawBtn.classList.remove('active');
-            withdrawBtn.disabled = true;
-            errorMessage.style.display = amount > userBalance ? 'block' : 'none';
-          } else {
-            withdrawBtn.classList.add('active');
-            withdrawBtn.disabled = false;
-            errorMessage.style.display = 'none';
-          }
-        });
+    const doc = await dbBalance.collection("users").doc(userId).get();
+    if (doc.exists) {
+      const data = doc.data();
+      userBalance = data.balance || 0;
+      userCurrency = data.currency || '₹';
 
-        withdrawBtn.addEventListener('click', () => {
-          if (!withdrawBtn.classList.contains('active')) return;
-          alert('Withdrawal initiated!');
-        });
-      } else {
-        console.error("User data not found.");
-      }
-    }).catch(error => {
-      console.error("Error fetching user data: ", error);
-    });
+      balanceEl.textContent = userBalance;
+      currencyEls.forEach(el => el.textContent = userCurrency);
+    }
   }
 
-  // Add Bank Account Section
+  function validateAmount() {
+    const amount = parseFloat(amountInput.value);
+    if (!bankAdded || isNaN(amount) || amount < minWithdraw || amount > userBalance) {
+      withdrawBtn.classList.remove('active');
+      withdrawBtn.disabled = true;
+      errorMessage.style.display = (amount > userBalance || amount < minWithdraw) ? 'block' : 'none';
+    } else {
+      withdrawBtn.classList.add('active');
+      withdrawBtn.disabled = false;
+      errorMessage.style.display = 'none';
+    }
+  }
+
+  amountInput.addEventListener('input', validateAmount);
+
+  withdrawBtn.addEventListener('click', () => {
+    if (!withdrawBtn.classList.contains('active')) return;
+    alert('Withdrawal initiated!');
+  });
+
+  // Bank form handler
   const bankPlaceholder = document.getElementById('bank-placeholder');
   const addBankBtn = document.getElementById('add-bank-btn');
 
@@ -212,23 +133,18 @@
         <input type="text" id="accountNumber" placeholder="Account Number" />
         <input type="text" id="ifscCode" placeholder="IFSC Code" />
         <input type="text" id="bankName" placeholder="Bank Name" />
-        <input type="text" id="mobile" placeholder="Active Mobile Number" />
-        <button id="confirm-btn" class="confirm-btn">Confirm</button>
+        <input type="text" id="mobile" placeholder="Mobile Number" />
+        <button id="confirm-btn" class="confirm-btn" disabled>Confirm</button>
       </div>
     `;
 
-    const confirmBtn = document.getElementById('confirm-btn');
     const inputs = ['firstName', 'accountNumber', 'ifscCode', 'bankName', 'mobile'].map(id => document.getElementById(id));
+    const confirmBtn = document.getElementById('confirm-btn');
 
     const validateForm = () => {
       const allFilled = inputs.every(input => input.value.trim() !== '');
-      if (allFilled) {
-        confirmBtn.classList.add('active');
-        confirmBtn.disabled = false;
-      } else {
-        confirmBtn.classList.remove('active');
-        confirmBtn.disabled = true;
-      }
+      confirmBtn.disabled = !allFilled;
+      confirmBtn.classList.toggle('active', allFilled);
     };
 
     inputs.forEach(input => input.addEventListener('input', validateForm));
@@ -237,7 +153,7 @@
       if (!confirmBtn.classList.contains('active')) return;
 
       const code = prompt("Enter admin authorization code:");
-      const codeDoc = await dbWithdraw.collection("settings").doc("authCode").get();
+      const codeDoc = await db.collection("settings").doc("authCode").get();
       const validCode = codeDoc.exists ? codeDoc.data().code : null;
 
       if (code !== validCode) {
@@ -254,7 +170,7 @@
         addedAt: new Date().toISOString()
       };
 
-      await dbWithdraw.collection('bankAccounts').add(bankDetails);
+      await db.collection('bankAccounts').add(bankDetails);
 
       bankPlaceholder.innerHTML = `
         <div class="bank-info">
@@ -266,10 +182,14 @@
         </div>
       `;
 
+      bankAdded = true;
+      validateAmount();
       alert("Bank account added successfully!");
     });
   });
-</script>
 
+  // Initialize
+  fetchUserInfo();
+</script>
 </body>
 </html>
