--- a/dashboard.html
+++ b/dashboard.html
@@ -151,7 +151,7 @@
 
   <div class="welcome-section">
     <div class="welcome-content">
-      <img src="https://i.postimg.cc/g2F6zV66/IMG-9529.png?v=026" alt="Tether Logo" />
+      <img src="https://i.postimg.cc/HL8WxBF2/IMG-2671.png?v=026" alt="Tether Logo" />
       <h2 id="welcome-username">Welcome</h2>
     </div>
   </div>
