--- a/withdraw.html
+++ b/withdraw.html
@@ -7,153 +7,123 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <style>
- /* General Styles */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  background-color: #000000;
-  color: #333;
-}
-
-/* Header */
-.header {
-  background-color: #021EFF;
-  color: #FFFFFF;
-  padding: 16px;
-  font-size: 18px;
-}
-
-/* Main Content Container */
-.container {
-  padding: 20px;
-}
-
-/* Card Component */
-.card {
-  background-color: #021EFF;
-  padding: 15px;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  color: #FFFFFF;
-}
-
-/* Withdraw Section */
-.withdraw-section {
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.withdraw-section input {
-  font-size: 28px;
-  text-align: center;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  width: 100px;
-  outline: none;
-}
-
-.note {
-  font-size: 14px;
-  color: #FFFFFF;
-  margin-top: 5px;
-}
-
-/* Bank Information Section */
-.bank-info {
-  margin-top: 30px;
-  padding: 15px;
-  border: 1px solid #eee;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-/* Add Bank Form */
-.add-bank-form {
-  margin-top: 30px;
-  padding: 15px;
-  border: 1px solid #eee;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-}
-
-.add-bank-form input {
-  width: 90%;
-  margin: 8px 0;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-/* Buttons */
-.withdraw-btn,
-.confirm-btn,
-.add-bank-btn {
-  margin-top: 30px;
-  padding: 15px;
-  width: 100%;
-  border: none;
-  font-size: 16px;
-  font-weight: bold;
-  border-radius: 8px;
-  background-color: #f0f3f7;
-  color: #bcc2cc;
-  cursor: not-allowed;
-}
-
-.withdraw-btn.active,
-.confirm-btn.active {
-  background-color: #021EFF;
-  color: #FFFFFF;
-  cursor: pointer;
-}
-
-.add-bank-btn {
-  background-color: #021EFF;
-  color: #fff;
-  cursor: pointer;
-}
-
-/* Error Message */
-.error {
-  color: red;
-  font-size: 14px;
-  margin-top: 10px;
-  display: none;
-}
-
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #fff;
+      color: #333;
+    }
+    .header {
+      background-color: #002366;
+      color: #fff;
+      padding: 16px;
+      font-size: 18px;
+    }
+    .container {
+      padding: 20px;
+    }
+    .card {
+      background-color: #f0fdf4;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    .withdraw-section {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .withdraw-section input {
+      font-size: 28px;
+      text-align: center;
+      border: none;
+      border-bottom: 1px solid #ccc;
+      width: 100px;
+      outline: none;
+    }
+    .note {
+      font-size: 14px;
+      color: #777;
+      margin-top: 5px;
+    }
+    .bank-info, .add-bank-form {
+      margin-top: 30px;
+      padding: 15px;
+      border: 1px solid #eee;
+      border-radius: 10px;
+    }
+    .bank-info {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .error {
+      color: red;
+      font-size: 14px;
+      margin-top: 10px;
+      text-align: center;
+      display: none;
+    }
+    .withdraw-btn, .confirm-btn, .add-bank-btn {
+      margin-top: 30px;
+      padding: 15px;
+      width: 100%;
+      border: none;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 8px;
+      background-color: #f0f3f7;
+      color: #bcc2cc;
+      cursor: not-allowed;
+    }
+    .withdraw-btn.active, .confirm-btn.active {
+      background-color: #007bff;
+      color: #fff;
+      cursor: pointer;
+    }
+    .add-bank-btn {
+      background-color: #007bff;
+      color: #fff;
+      cursor: pointer;
+    }
+    .add-bank-form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .add-bank-form input {
+      width: 90%;
+      margin: 8px 0;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
+
 <div class="header">Withdraw</div>
+
 <div class="container">
   <div class="card">
-    <h3>Available Balance</h3>
+    <h3>Withdrawable Winnings</h3>
     <p><strong><span id="currency">₹</span><span id="balance">0</span></strong></p>
   </div>
 
   <div class="withdraw-section">
-    <label for="amount"></label><br/>
-    <span id="input-currency" style="font-size: 30px; color: #FFFFFF;">₹</span>
-<input type="number" id="amount" min="0" />
-<div class="note"></div>
-
+    <label for="amount">Withdraw</label><br/>
+    <span style="font-size: 24px;" id="input-currency">₹</span>
+    <input type="number" id="amount" min="0" />
   </div>
 
   <div id="bank-placeholder">
     <button id="add-bank-btn" class="add-bank-btn">Add Bank Account</button>
   </div>
 
-  <div id="error-message" class="error">Invalid amount. Check your balance.</div>
+  <div id="error-message" class="error">Amount must not exceed your balance</div>
   <button id="withdraw-btn" class="withdraw-btn" disabled>WITHDRAW</button>
 </div>
 
 <script>
-  // Main Firebase for withdrawal data
   const firebaseConfig = {
     apiKey: "AIzaSyC0seQcc9v7ms5OqUCPi7rxaN4pJdP8zlE",
     authDomain: "withdrawapp-eb9a9.firebaseapp.com",
@@ -165,7 +135,6 @@ body {
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 
-  // Secondary Firebase for balance/currency
   const firebaseConfigBalance = {
     apiKey: "AIzaSyDtCfsMkc_Z_9ZeF0TEHTDFBzLlkU-egSc",
     authDomain: "tradevanta-a3e0d.firebaseapp.com",
@@ -179,13 +148,14 @@ body {
   const errorMessage = document.getElementById('error-message');
   const balanceEl = document.getElementById('balance');
   const currencyEls = [document.getElementById('currency'), document.getElementById('input-currency')];
+  const bankPlaceholder = document.getElementById('bank-placeholder');
+  const addBankBtn = document.getElementById('add-bank-btn');
 
   let userBalance = 0;
   let userCurrency = '₹';
   let bankAdded = false;
   let userId = localStorage.getItem("userId");
 
-  // Fetch balance and currency
   async function fetchUserInfo() {
     if (!userId) return;
     const doc = await dbBalance.collection("users").doc(userId).get();
@@ -198,9 +168,28 @@ body {
     }
   }
 
+  async function checkBankAccount() {
+    if (!userId) return;
+    const bankDoc = await db.collection('bankAccounts').doc(userId).get();
+    if (bankDoc.exists) {
+      const data = bankDoc.data();
+      bankPlaceholder.innerHTML = `
+        <div class="bank-info">
+          <div>
+            <div>${data.bankName.toUpperCase()}</div>
+            <div>XXXXXX${data.accountNumber.slice(-4)}</div>
+          </div>
+          <input type="radio" checked />
+        </div>
+      `;
+      bankAdded = true;
+      validateAmount();
+    }
+  }
+
   function validateAmount() {
     const amount = parseFloat(amountInput.value);
-    if (!bankAdded || isNaN(amount) || amount > userBalance || amount <= 0) {
+    if (!bankAdded || isNaN(amount) || amount <= 0 || amount > userBalance) {
       withdrawBtn.classList.remove('active');
       withdrawBtn.disabled = true;
       errorMessage.style.display = (amount > userBalance || amount <= 0) ? 'block' : 'none';
@@ -215,11 +204,10 @@ body {
 
   withdrawBtn.addEventListener('click', async () => {
     if (!withdrawBtn.classList.contains('active')) return;
-    
+
     const amount = parseFloat(amountInput.value);
     if (!userId || isNaN(amount)) return;
 
-    // Store in Firestore (Main project)
     await db.collection("withdrawals").add({
       userId: userId,
       amount: amount,
@@ -233,10 +221,6 @@ body {
       window.location.href = "dashboard.html";
     }, 2000);
   });
-
-  // Bank form handler
-  const bankPlaceholder = document.getElementById('bank-placeholder');
-  const addBankBtn = document.getElementById('add-bank-btn');
 
   addBankBtn.addEventListener('click', () => {
     bankPlaceholder.innerHTML = `
@@ -283,7 +267,7 @@ body {
         addedAt: new Date().toISOString()
       };
 
-      await db.collection('bankAccounts').add(bankDetails);
+      await db.collection('bankAccounts').doc(userId).set(bankDetails);
 
       bankPlaceholder.innerHTML = `
         <div class="bank-info">
@@ -302,6 +286,8 @@ body {
   });
 
   fetchUserInfo();
+  checkBankAccount();
 </script>
+
 </body>
 </html>
