--- a/withdraw.html
+++ b/withdraw.html
@@ -6,111 +6,133 @@
   <title>Withdraw</title>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #fff;
-      color: #333;
-    }
-    .header {
-      background-color: #002366;
-      color: #fff;
-      padding: 16px;
-      font-size: 18px;
-    }
-    .container {
-      padding: 20px;
-    }
-    .card {
-      background-color: #f0fdf4;
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-    .withdraw-section {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    .withdraw-section input {
-      font-size: 28px;
-      text-align: center;
-      border: none;
-      border-bottom: 1px solid #ccc;
-      width: 100px;
-      outline: none;
-    }
-    .note {
-      font-size: 14px;
-      color: #777;
-      margin-top: 5px;
-    }
-    .bank-info, .add-bank-form {
-      margin-top: 30px;
-      padding: 15px;
-      border: 1px solid #eee;
-      border-radius: 10px;
-    }
-    .bank-info {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .error {
-      color: red;
-      font-size: 14px;
-      margin-top: 10px;
-      text-align: center;
-      display: none;
-    }
-    .withdraw-btn, .confirm-btn, .add-bank-btn {
-      margin-top: 30px;
-      padding: 15px;
-      width: 100%;
-      border: none;
-      font-size: 16px;
-      font-weight: bold;
-      border-radius: 8px;
-      background-color: #f0f3f7;
-      color: #bcc2cc;
-      cursor: not-allowed;
-    }
-    .withdraw-btn.active, .confirm-btn.active {
-      background-color: #007bff;
-      color: #fff;
-      cursor: pointer;
-    }
-    .add-bank-btn {
-      background-color: #007bff;
-      color: #fff;
-      cursor: pointer;
-    }
-    .add-bank-form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .add-bank-form input {
-      width: 90%;
-      margin: 8px 0;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-  </style>
+<style>
+  /* Base Styles */
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background-color: #000000;
+    color: #FFFFFF;
+  }
+
+  /* Header */
+  .header {
+    background-color: #091DFC;
+    color: #fff;
+    padding: 16px;
+    font-size: 18px;
+  }
+
+  /* Container */
+  .container {
+    padding: 20px;
+  }
+
+  /* Card */
+  .card {
+    background-color: #091DFC;
+    padding: 8px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+  }
+
+  /* Withdraw Section */
+  .withdraw-section {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .withdraw-section input {
+    font-size: 28px;
+    text-align: center;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    width: 100px;
+    outline: none;
+  }
+
+  .note {
+    font-size: 14px;
+    color: #777;
+    margin-top: 5px;
+  }
+
+  /* Bank Info & Form */
+  .bank-info, .add-bank-form {
+    margin-top: 30px;
+    padding: 15px;
+    border: 1px solid #eee;
+    border-radius: 10px;
+  }
+
+  .bank-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .add-bank-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .add-bank-form input {
+    width: 90%;
+    margin: 8px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  /* Error Message */
+  .error {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+    text-align: center;
+    display: none;
+  }
+
+  /* Buttons */
+  .withdraw-btn, .confirm-btn, .add-bank-btn {
+    margin-top: 30px;
+    padding: 15px;
+    width: 100%;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 8px;
+    background-color: #f0f3f7;
+    color: #bcc2cc;
+    cursor: not-allowed;
+  }
+
+  .withdraw-btn.active, .confirm-btn.active {
+    background-color: #091DFC;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .add-bank-btn {
+    background-color: #091DFC;
+    color: #fff;
+    cursor: pointer;
+  }
+</style>
 </head>
 <body>
 
-<div class="header">Withdraw</div>
+<div class="header">Request A Withdraw </div>
 
 <div class="container">
   <div class="card">
-    <h3>Withdrawable Winnings</h3>
+    <h3>Available Balance </h3>
     <p><strong><span id="currency">₹</span><span id="balance">0</span></strong></p>
   </div>
 
   <div class="withdraw-section">
-    <label for="amount">Withdraw</label><br/>
+    <label for="amount"></label><br/>
     <span style="font-size: 24px;" id="input-currency">₹</span>
     <input type="number" id="amount" min="0" />
   </div>
