--- a/withdraw.html
+++ b/withdraw.html
@@ -230,18 +230,36 @@
     const amount = parseFloat(amountInput.value);
     if (!userId || isNaN(amount)) return;
 
-    await db.collection("withdrawals").add({
-      userId: userId,
-      amount: amount,
-      currency: userCurrency,
-      status: "pending",
-      createdAt: new Date().toISOString()
-    });
+    try {
+      // Save withdrawal to first project
+      await db.collection("withdrawals").add({
+        userId: userId,
+        amount: amount,
+        currency: userCurrency,
+        status: "pending",
+        createdAt: new Date().toISOString()
+      });
 
-    alert('Withdrawal initiated!');
-    setTimeout(() => {
-      window.location.href = "dashboard.html";
-    }, 2000);
+      // Deduct from user's balance in second project
+      const userRef = dbBalance.collection("users").doc(userId);
+      await dbBalance.runTransaction(async (transaction) => {
+        const userDoc = await transaction.get(userRef);
+        if (!userDoc.exists) throw "User not found in balance DB.";
+        const currentBalance = userDoc.data().balance || 0;
+        if (amount > currentBalance) throw "Insufficient balance.";
+        transaction.update(userRef, {
+          balance: currentBalance - amount
+        });
+      });
+
+      alert('Withdrawal initiated!');
+      setTimeout(() => {
+        window.location.href = "dashboard.html";
+      }, 2000);
+    } catch (error) {
+      console.error("Withdrawal error:", error);
+      alert("Error processing withdrawal. Please try again.");
+    }
   });
 
   addBankBtn.addEventListener('click', () => {
