--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
   <title>Account</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    * {
+   * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -15,13 +15,14 @@
     body {
       background-color: #000;
       color: white;
+      font-size: 3rem
     }
 
     header {
       background-color: #000;
       text-align: center;
       padding: 1rem;
-      font-size: 1.2rem;
+      font-size: 3rem;
     }
 
     .welcome-section {
@@ -50,7 +51,7 @@
     }
 
     .welcome-content h2 {
-      font-size: 1.5rem;
+      font-size: 3rem;
       color: white;
       margin: 0;
     }
@@ -64,13 +65,13 @@
     }
 
     .balance-card .amount {
-      font-size: 1.3rem;
+      font-size: 4.3rem;
       color: orange;
       margin-bottom: 0.3rem;
     }
 
     .balance-card .usd {
-      font-size: 0.9rem;
+      font-size: 2.9rem;
       color: #aaa;
     }
 
@@ -91,7 +92,7 @@
       border: none;
       border-radius: 6px;
       padding: 0.6rem 1.2rem;
-      font-size: 0.9rem;
+      font-size: 1.7rem;
       flex: 1;
       display: flex;
       align-items: center;
@@ -119,7 +120,7 @@
 
     .services h3 {
       margin-bottom: 1rem;
-      font-size: 1rem;
+      font-size: 5rem;
     }
 
     .service-grid {
@@ -133,13 +134,13 @@
       border-radius: 8px;
       padding: 0.8rem 0;
       text-align: center;
-      font-size: 0.8rem;
+      font-size: 2rem;
       color: white;
       cursor: pointer;
     }
 
     .service-item i {
-      font-size: 1.2rem;
+      font-size: 2rem;
       display: block;
       margin-bottom: 0.3rem;
       color: #1a2cff;
