--- a/admin/index.html
+++ b/admin/index.html
@@ -1,1 +1,328 @@
-<h1>Admin Panel Coming Soon</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Admin User Table</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background: #f0f0f0;
+      font-size: 27px;
+    }
+
+    #login-container {
+      background: #fff;
+      border-radius: 8px;
+      padding: 30px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      width: 300px;
+      margin: 50px auto;
+      text-align: center;
+    }
+
+    .login-input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+
+    .login-button {
+      background-color: #5cb85c;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    .login-error {
+      color: red;
+      margin-top: 10px;
+    }
+
+    #user-table-container {
+      display: none;
+    }
+
+    .user-table {
+      background: #fff;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      width: 98%;
+      margin: 20px auto;
+      overflow-x: auto;
+    }
+
+    .search-bar {
+      margin-bottom: 15px;
+    }
+
+    .search-bar input {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    .table-header, .table-row {
+      display: grid;
+      grid-template-columns: 0.4fr 1.4fr 1.2fr 1.5fr 1.5fr;
+      align-items: center;
+      padding: 10px 0;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .table-header {
+      font-weight: bold;
+    }
+
+    .cell {
+      padding: 8px 5px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .cell.actions {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+    }
+
+    .cell.actions button {
+      background: none;
+      border: none;
+      padding: 5px 10px;
+      cursor: pointer;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .hidden-save-cancel {
+      display: none;
+    }
+
+    .cell input {
+      width: 90%;
+      padding: 4px;
+      font-size: 14px;
+    }
+
+    #logout-button {
+      background-color: #d9534f;
+      color: white;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+      margin-top: 15px;
+    }
+  </style>
+</head>
+<body>
+
+<div id="login-container">
+  <h2>Login</h2>
+  <input type="password" id="login-password" class="login-input" placeholder="Password">
+  <button class="login-button" id="login-btn">Log In</button>
+  <div id="login-error" class="login-error"></div>
+</div>
+
+<div id="user-table-container" class="user-table">
+  <div class="search-bar">
+    <input type="text" id="searchInput" placeholder="Search by username...">
+  </div>
+
+  <div class="table-header">
+    <div class="cell">No.</div>
+    <div class="cell">Username</div>
+    <div class="cell">Balance</div>
+    <div class="cell">Action 1</div>
+    <div class="cell">Action 2</div>
+  </div>
+
+  <div id="tableBody"></div>
+  <button id="logout-button">Log Out</button>
+</div>
+
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+
+<script>
+ const firebaseConfig = {
+      apiKey: "AIzaSyDtCfsMkc_Z_9ZeF0TEHTDFBzLlkU-egSc",
+      authDomain: "tradevanta-a3e0d.firebaseapp.com",
+      projectId: "tradevanta-a3e0d",
+      storageBucket: "tradevanta-a3e0d.appspot.com",
+      messagingSenderId: "441098922985",
+      appId: "1:441098922985:web:163878a0ef5b2054f8b978"
+    };
+
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+
+  const loginContainer = document.getElementById('login-container');
+  const userTableContainer = document.getElementById('user-table-container');
+  const loginPasswordInput = document.getElementById('login-password');
+  const loginBtn = document.getElementById('login-btn');
+  const loginErrorDiv = document.getElementById('login-error');
+  const tableBody = document.getElementById('tableBody');
+  const searchInput = document.getElementById('searchInput');
+  const logoutButton = document.getElementById('logout-button');
+
+  let users = [];
+  const predefinedEmail = "pietanor@choco.la";
+
+  async function fetchUsers() {
+    const snapshot = await db.collection('users').get();
+    users = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+    renderTable(searchInput.value);
+  }
+
+  function renderTable(filter = '') {
+    tableBody.innerHTML = '';
+    users
+      .filter(user =>
+        (user.username?.toLowerCase().includes(filter.toLowerCase())) ||
+        (user.balance?.toString().includes(filter))
+      )
+      .forEach((user, index) => {
+        const row = document.createElement('div');
+        row.className = 'table-row';
+
+        const cells = `
+          <div class="cell">${index + 1}</div>
+          <div class="cell">${user.username || ''}</div>
+          <div class="cell">${user.balance !== undefined ? parseFloat(user.balance).toFixed(2) : ''}</div>
+          <div class="cell">
+  <button class="edit-btn" title="Edit">Edit ✍️</button>
+  <div class="hidden-save-cancel" style="display:none;">
+    <button class="save-btn" title="Save">✔️</button>
+  </div>
+</div>
+<div class="cell">
+  <button class="delete-btn" title="Delete">Delete 🗑️</button>
+</div>
+        `;
+        row.innerHTML = cells;
+
+        const editBtn = row.querySelector('.edit-btn');
+        const deleteBtn = row.querySelector('.delete-btn');
+        const saveCancelDiv = row.querySelector('.hidden-save-cancel');
+        const saveBtn = saveCancelDiv.querySelector('.save-btn');
+
+        const editableCells = Array.from(row.querySelectorAll('.cell')).slice(1, 3);
+
+        editBtn.addEventListener('click', () => {
+          startEdit(editableCells, user);
+          editBtn.style.display = 'none';
+          saveCancelDiv.style.display = 'flex';
+        });
+
+        saveBtn.addEventListener('click', async () => {
+          const updatedData = getUpdatedUserData(editableCells);
+          if (updatedData) {
+            try {
+              await db.collection('users').doc(user.id).update(updatedData);
+              users = users.map(u => (u.id === user.id ? { ...u, ...updatedData } : u));
+              renderTable(searchInput.value);
+            } catch (error) {
+              console.error("Error updating user:", error);
+              alert("Failed to update user.");
+            }
+          }
+        });
+
+        deleteBtn.addEventListener('click', async () => {
+          if (confirm(`Delete user: ${user.username}?`)) {
+            try {
+              await db.collection('users').doc(user.id).delete();
+              users = users.filter(u => u.id !== user.id);
+              renderTable(searchInput.value);
+            } catch (error) {
+              console.error("Delete error:", error);
+              alert("Failed to delete user.");
+            }
+          }
+        });
+
+        tableBody.appendChild(row);
+      });
+  }
+
+  function startEdit(cells, user) {
+    ['username', 'balance'].forEach((key, i) => {
+      const cell = cells[i];
+      const input = document.createElement('input');
+      input.value = cell.textContent.trim();
+      if (key === 'balance') input.type = 'number';
+      cell.innerHTML = '';
+      cell.appendChild(input);
+    });
+  }
+
+  function getUpdatedUserData(cells) {
+    const keys = ['username', 'balance'];
+    const data = {};
+    for (let i = 0; i < keys.length; i++) {
+      const val = cells[i].querySelector('input').value;
+      if (keys[i] === 'balance') {
+        const num = parseFloat(val);
+        if (isNaN(num)) {
+          alert(`Enter a valid number for ${keys[i]}`);
+          return null;
+        }
+        data[keys[i]] = num;
+      } else {
+        data[keys[i]] = val;
+      }
+    }
+    return data;
+  }
+
+  searchInput.addEventListener('input', () => renderTable(searchInput.value));
+
+  loginBtn.addEventListener('click', async () => {
+    const password = loginPasswordInput.value;
+    try {
+      await auth.signInWithEmailAndPassword(predefinedEmail, password);
+      loginContainer.style.display = 'none';
+      userTableContainer.style.display = 'block';
+      await fetchUsers();
+    } catch {
+      loginErrorDiv.textContent = "Incorrect password.";
+    }
+  });
+
+  logoutButton.addEventListener('click', async () => {
+    await auth.signOut();
+    loginContainer.style.display = 'block';
+    userTableContainer.style.display = 'none';
+    tableBody.innerHTML = '';
+  });
+
+  auth.onAuthStateChanged(async user => {
+    if (user) {
+      loginContainer.style.display = 'none';
+      userTableContainer.style.display = 'block';
+      await fetchUsers();
+    } else {
+      loginContainer.style.display = 'block';
+      userTableContainer.style.display = 'none';
+    }
+  });
+</script>
+
+</body>
+</html>
