--- a/admin/index.html
+++ b/admin/index.html
@@ -7,15 +7,16 @@
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
-      background: #f0f0f0;
+      background: #000; /* Black background */
       font-size: 27px;
+      color: #fff;
     }
 
     #login-container {
-      background: #fff;
+      background: #1a1a1a;
       border-radius: 8px;
       padding: 30px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(255,255,255,0.1);
       width: 300px;
       margin: 50px auto;
       text-align: center;
@@ -25,9 +26,11 @@
       width: 100%;
       padding: 10px;
       margin-bottom: 15px;
-      border: 1px solid #ccc;
+      border: 1px solid #444;
       border-radius: 4px;
       box-sizing: border-box;
+      background: #333;
+      color: white;
     }
 
     .login-button {
@@ -50,13 +53,14 @@
     }
 
     .user-table {
-      background: #fff;
+      background: #1a1a1a;
       border-radius: 8px;
       padding: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(255,255,255,0.1);
       width: 98%;
       margin: 20px auto;
       overflow-x: auto;
+      color: #fff;
     }
 
     .search-bar {
@@ -68,8 +72,10 @@
       padding: 10px;
       font-size: 16px;
       border-radius: 6px;
-      border: 1px solid #ccc;
+      border: 1px solid #555;
       box-sizing: border-box;
+      background: #222;
+      color: white;
     }
 
     .table-header, .table-row {
@@ -77,7 +83,7 @@
       grid-template-columns: 0.4fr 1.4fr 1.2fr 1.5fr 1.5fr;
       align-items: center;
       padding: 10px 0;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #444;
     }
 
     .table-header {
@@ -103,7 +109,7 @@
       padding: 5px 10px;
       cursor: pointer;
       font-size: 14px;
-      color: #555;
+      color: #ddd;
     }
 
     .hidden-save-cancel {
@@ -201,19 +207,23 @@
         const row = document.createElement('div');
         row.className = 'table-row';
 
+        const balanceDisplay = user.balance !== undefined
+          ? `${user.currency ? user.currency + ' ' : ''}${parseFloat(user.balance).toFixed(2)}`
+          : '';
+
         const cells = `
           <div class="cell">${index + 1}</div>
           <div class="cell">${user.username || ''}</div>
-          <div class="cell">${user.balance !== undefined ? parseFloat(user.balance).toFixed(2) : ''}</div>
+          <div class="cell">${balanceDisplay}</div>
           <div class="cell">
-  <button class="edit-btn" title="Edit">Edit ✍️</button>
-  <div class="hidden-save-cancel" style="display:none;">
-    <button class="save-btn" title="Save">✔️</button>
-  </div>
-</div>
-<div class="cell">
-  <button class="delete-btn" title="Delete">Delete 🗑️</button>
-</div>
+            <button class="edit-btn" title="Edit">Edit ✍️</button>
+            <div class="hidden-save-cancel" style="display:none;">
+              <button class="save-btn" title="Save">✔️</button>
+            </div>
+          </div>
+          <div class="cell">
+            <button class="delete-btn" title="Delete">Delete 🗑️</button>
+          </div>
         `;
         row.innerHTML = cells;
 
@@ -222,24 +232,24 @@
         const saveCancelDiv = row.querySelector('.hidden-save-cancel');
         const saveBtn = saveCancelDiv.querySelector('.save-btn');
 
-        const editableCells = Array.from(row.querySelectorAll('.cell')).slice(1, 3);
+        const editableCell = row.querySelectorAll('.cell')[2];
 
         editBtn.addEventListener('click', () => {
-          startEdit(editableCells, user);
+          startEdit(editableCell, user);
           editBtn.style.display = 'none';
           saveCancelDiv.style.display = 'flex';
         });
 
         saveBtn.addEventListener('click', async () => {
-          const updatedData = getUpdatedUserData(editableCells);
-          if (updatedData) {
+          const updatedBalance = getUpdatedBalance(editableCell);
+          if (updatedBalance !== null) {
             try {
-              await db.collection('users').doc(user.id).update(updatedData);
-              users = users.map(u => (u.id === user.id ? { ...u, ...updatedData } : u));
+              await db.collection('users').doc(user.id).update({ balance: updatedBalance });
+              users = users.map(u => u.id === user.id ? { ...u, balance: updatedBalance } : u);
               renderTable(searchInput.value);
             } catch (error) {
-              console.error("Error updating user:", error);
-              alert("Failed to update user.");
+              console.error("Error updating balance:", error);
+              alert("Failed to update balance.");
             }
           }
         });
@@ -261,34 +271,22 @@
       });
   }
 
-  function startEdit(cells, user) {
-    ['username', 'balance'].forEach((key, i) => {
-      const cell = cells[i];
-      const input = document.createElement('input');
-      input.value = cell.textContent.trim();
-      if (key === 'balance') input.type = 'number';
-      cell.innerHTML = '';
-      cell.appendChild(input);
-    });
+  function startEdit(cell, user) {
+    const input = document.createElement('input');
+    input.value = user.balance;
+    input.type = 'number';
+    cell.innerHTML = '';
+    cell.appendChild(input);
   }
 
-  function getUpdatedUserData(cells) {
-    const keys = ['username', 'balance'];
-    const data = {};
-    for (let i = 0; i < keys.length; i++) {
-      const val = cells[i].querySelector('input').value;
-      if (keys[i] === 'balance') {
-        const num = parseFloat(val);
-        if (isNaN(num)) {
-          alert(`Enter a valid number for ${keys[i]}`);
-          return null;
-        }
-        data[keys[i]] = num;
-      } else {
-        data[keys[i]] = val;
-      }
+  function getUpdatedBalance(cell) {
+    const val = cell.querySelector('input').value;
+    const num = parseFloat(val);
+    if (isNaN(num)) {
+      alert("Enter a valid number for balance");
+      return null;
     }
-    return data;
+    return num;
   }
 
   searchInput.addEventListener('input', () => renderTable(searchInput.value));
